--- a/beranda.html
+++ b/beranda.html
@@ -15,7 +15,7 @@
             <a href="beranda.html" class="btn btn-light btn-sm">Beranda</a>
             <a href="profil.html" class="btn btn-light btn-sm">Profil</a>
             <a href="transaksi.html" class="btn btn-light btn-sm">Transaksi</a>
-            <a href="login.html" class="btn btn-danger btn-sm">Logout</a>
+            <a href="index.html" class="btn btn-danger btn-sm">Logout</a>
         </div>
     </div>
 </nav>
